--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "arrive": "^2.4.1",
     "d3-geo": "^1.6.4",
     "d3-interpolate": "^1.1.5",
+    "d3-queue": "^3.0.7",
+    "d3-request": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-transition": "^1.1.0",
     "preact": "^8.2.5",
