--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-interpolate": "^1.1.5",
     "d3-queue": "^3.0.7",
     "d3-request": "^1.0.6",
+    "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-transition": "^1.1.0",
     "preact": "^8.2.5",
