--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "d3-request": "^1.0.6",
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
+    "d3-svg-annotation": "^2.0.0",
     "d3-transition": "^1.1.0",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
