--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "north-korea-missile-map",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A project generated from aunty's preact-app template.",
   "license": "MIT",
   "private": true,
@@ -12,27 +12,27 @@
     "start": "aunty serve"
   },
   "devDependencies": {
-    "@abcnews/aunty": "5.4.x",
-    "eslint": "^4.8.0",
+    "@abcnews/aunty": "^5.6.0",
+    "eslint": "^4.9.0",
     "eslint-plugin-react": "^7.4.0"
   },
   "dependencies": {
     "arrive": "^2.4.1",
     "canvas-dpi-scaler": "0.0.3",
-    "d3-array": "^1.2.0",
+    "d3-array": "^1.2.1",
     "d3-color": "^1.0.3",
-    "d3-drag": "^1.1.1",
-    "d3-geo": "^1.6.4",
+    "d3-drag": "^1.2.1",
+    "d3-geo": "^1.9.0",
     "d3-interpolate": "^1.1.5",
     "d3-queue": "^3.0.7",
     "d3-request": "^1.0.6",
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
-    "d3-svg-annotation": "^2.0.0",
+    "d3-svg-annotation": "^2.1.0",
     "d3-transition": "^1.1.0",
     "jankdefer": "^1.0.0",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
-    "topojson": "^3.0.0"
+    "topojson": "^3.0.2"
   }
 }
