--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "north-korea-missile-map",
-  "version": "1.0.2",
-  "description": "A project generated from aunty's preact-app template.",
+  "name": "north-korea-missile-ranges",
+  "version": "1.0.0",
+  "description": "A project generated from aunty's react-app template.",
   "license": "MIT",
   "private": true,
   "contributors": [
-    "Joshua Byrd <phocks@gmail.com>"
+    "Nathan Hoad <nathan@nathanhoad.net>"
   ],
-  "aunty": "preact-app",
+  "aunty": "react-app",
   "scripts": {
-    "start": "aunty serve"
+    "start": "aunty serve",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      ".*": "<rootDir>/node_modules/@abcnews/aunty/src/utils/jest"
+    }
   },
   "devDependencies": {
-    "@abcnews/aunty": "^5.6.0",
-    "eslint": "^4.9.0",
-    "eslint-plugin-react": "^7.4.0"
+    "@abcnews/aunty": "^8.0.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^23.1.0",
+    "react-test-renderer": "^16.4.0"
   },
   "dependencies": {
-    "arrive": "^2.4.1",
-    "canvas-dpi-scaler": "0.0.3",
-    "d3-array": "^1.2.1",
-    "d3-color": "^1.0.3",
-    "d3-drag": "^1.2.1",
-    "d3-geo": "^1.9.0",
-    "d3-interpolate": "^1.1.5",
-    "d3-queue": "^3.0.7",
+    "@abcnews/react-globe": "^1.0.0",
+    "@abcnews/scrollyteller": "^1.0.4",
     "d3-request": "^1.0.6",
-    "d3-scale": "^1.0.6",
-    "d3-selection": "^1.1.0",
-    "d3-svg-annotation": "^2.1.0",
-    "d3-transition": "^1.1.0",
-    "hoek": "^5.0.3",
-    "jankdefer": "^1.0.0",
-    "preact": "^8.2.5",
-    "preact-compat": "^3.17.0",
-    "topojson": "^3.0.2"
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   }
 }
