--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
     }
   },
   "devDependencies": {
-    "@abcnews/aunty": "^10.5.0",
+    "@abcnews/aunty": "^13.0.3",
+    "@babel/preset-react": "^7.18.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cryptiles": ">=4.1.2",
     "extend": ">=3.0.2",
-    "jest": "^24.5.0",
+    "jest": "^29.1.2",
     "react-test-renderer": "^16.4.0",
+    "tunnel-agent": ">=0.6.0",
     "url-parse": ">=1.4.3",
-    "webpack-dev-server": ">=3.1.11",
-    "tunnel-agent": ">=0.6.0"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
+    "@abcnews/env-utils": "^3.0.1",
+    "@abcnews/mount-utils": "^2.0.0",
     "@abcnews/react-globe": "^1.0.6",
-    "@abcnews/scrollyteller": "^1.0.4",
+    "@abcnews/scrollyteller": "^4.1.1",
     "d3-request": "^1.0.6",
     "hoek": "^4.2.1",
     "react": "^16.4.2",
